[gd_scene load_steps=4 format=3 uid="uid://dhp84nbs5osdm"]

[ext_resource type="Script" path="res://EnemyAttacks/PuddleHazard/puddle_hazard.gd" id="1_0w42w"]
[ext_resource type="PackedScene" uid="uid://cnm8rfklhl5a" path="res://EnemyAttacks/PuddleHazard/AlertSign.tscn" id="2_ao7ew"]
[ext_resource type="PackedScene" uid="uid://da85dffe03nhp" path="res://EnemyAttacks/PuddleHazard/PersistentFlame.tscn" id="3_pnqvt"]

[node name="PuddleHazard" type="Node2D"]
script = ExtResource("1_0w42w")
telegraph_image = ExtResource("2_ao7ew")
attack_image = ExtResource("3_pnqvt")

[node name="TelegraphTimer" type="Timer" parent="."]
one_shot = true

[node name="HitZone" type="Area2D" parent="."]

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Telegraph" type="Node2D" parent="."]
